atualizando classes relacionados a usuario, regras e permissoe